# chezmoi

./: .chezmoi.toml.tmpl  .chezmoiexternal.toml.tmpl  .chezmoiignore  .gitignore  README.md  dot_aliases.sh  dot_exports.sh  dot_gitconfig  dot_mailcap  dot_tmux.conf  dot_tmux.conf.tmpl  dot_zshrc  dot_zshrc.config  pyproject.toml  run_after_lvim.sh  run_file_dependent_scripts.py  run_once_after_lvim.sh  run_once_before_install.sh  run_once_install_packages.sh.tmpl  symlink_dot_tmux.conf.tmpl
data/: cleanup_homedir.yaml
data/encrypted/: deepseek_key.gpg  gemini_key.gpg  github_access_token.gpg  github_release_please_token.gpg  openrouter_key.gpg  siliconflow_key.gpg  tavily_key.gpg  xai_key.gpg
doc/: cheatsheet.md  nvim.md  server_setup.md  win10.md
dot_config/: symlink_karabiner.tmpl  symlink_nvim.tmpl
dot_config/astronvim/: .neoconf.json
dot_config/astronvim_v4/: init.lua  neoconf.json  symlink_lazy-lock.json.tmpl
dot_config/astronvim_v5/: init.lua  neoconf.json  symlink_lazy-lock.json.tmpl
dot_config/bat/: config
dot_config/ghostty/: config
dot_config/git/: config
dot_config/glances/: glances.conf
dot_config/karabiner/: symlink_karabiner.json.tmpl
dot_config/kitty/: kitty.conf
dot_config/lsyncd/: ssh_tmpl.lua
dot_config/lvim/: .editorconfig  .luacheckrc  .tmuxp.yaml  config.lua  init.lua  package.json  symlink_lazy-lock.json.tmpl
dot_config/matplotlib/: matplotlibrc
dot_gemini/: settings.json  symlink_settings.json.tmpl
dot_ssh/: authorized_keys.tmpl
tools/: chezmoi_init.sh  cleanup_dir.py  install-package.py  install_packages.sh.tmpl
(+223 files in other folders)
