[project]
name = "chezmoi-scripts"
version = "0.1.1"
description = "Helper scripts for chezmoi"
authors = [{ name = "Jieru Mei", email = "meijieru@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["pyyaml"]

[tool.ruff]
line-length = 120
indent-width = 4
lint.extend-select = ["I"]
target-version = "py39"
